fix: 워크스페이스 및 초대 로직 수정